fixed changes